<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#323232"
    android:padding="5dp"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >

    <!-- width 615pt height 365pt -->

    <TableLayout
        android:layout_width="145pt"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5pt"
        android:background="#FFFFFF" >

        <TableRow
            android:layout_width="fill_parent"
            android:background="#323232" >

            <ImageView
                android:id="@+id/header_section"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_header" />
        </TableRow>

        <TableRow android:layout_width="fill_parent" >

            <TableLayout
                android:id="@+id/menulayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2pt" >
            </TableLayout>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="365pt"
        android:layout_alignParentRight="true"
        android:background="#323232"
        android:gravity="right" >

        <TableRow
            android:layout_width="461pt"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:enabled="false"
                android:gravity="right"
                android:padding="7.4490pt"
                android:text="@string/bienvenida"
                android:textColor="#98C93C"
                android:textSize="13pt" />
        </TableRow>

        <TableRow
            android:id="@+id/rowpassword"
            android:layout_width="461pt" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtclave"
                    android:textColor="#FFFFFF"
                    android:textSize="10pt" />

                <TextView
                    android:layout_width="5pt"
                    android:layout_height="5pt" />

                <EditText
                    android:id="@+id/claveacceso"
                    android:layout_width="150pt"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/rowacceso"
            android:layout_width="461pt" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnserver"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtserver"
                android:layout_width="100pt"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/rowusuario"
            android:layout_width="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnusuario"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtusername"
                android:layout_width="100pt"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:inputType="text" />
        </TableRow>

        <TableRow android:id="@+id/rowdireccion" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnmac"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/macaddress"
                android:layout_width="100pt"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow android:id="@+id/rowtemporizador" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btntemppo"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/temporizador"
                android:layout_width="100pt"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/rowbutton"
            android:layout_width="match_parent" >

            <Button
                android:id="@+id/btnguardarconf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnsave" />

            <Button
                android:id="@+id/btncancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnsave" />
        </TableRow>
    </TableLayout>

</RelativeLayout>