<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="615pt"
    android:layout_height="365pt"
    android:background="#323232"
    android:padding="5dp"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >

    <!-- width 615pt height 365pt -->

    <TableLayout
        android:layout_width="145pt"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5pt"
        android:background="#FFFFFF" >

        <TableRow
            android:layout_width="fill_parent"
            android:background="#323232" >

            <ImageView
                android:id="@+id/header_section"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_header" />
        </TableRow>

        <TableRow android:layout_width="fill_parent" >

            <TableLayout
                android:id="@+id/menulayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2pt" >
            </TableLayout>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="461pt"
        android:layout_height="365pt"
        android:layout_alignParentRight="true"
        android:background="#323232"
        android:gravity="right" >

        <TableRow
            android:background="@drawable/ic_bottomlinehard"
            android:paddingBottom="7.4490pt"
            android:paddingTop="7.4490pt" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#323232"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5pt"
                    android:text="@string/evaluaciones"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp" />

                <ImageView
                    android:id="@+id/imagen_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_eval_title" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <TableLayout
                android:id="@+id/tablacontenido"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:layout_weight="0.7"
                android:background="#323232" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/contadorpreguntas"
                        android:gravity="right"
                        android:textColor="#98C93C"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/pctxtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableImageContainer"
                    android:layout_width="fill_parent"
                    android:background="#FFFFFF" >

                    <LinearLayout
                        android:id="@+id/linearlt"
                        android:layout_width="461pt"
                        android:layout_height="210pt" >

                        <ImageView
                            android:id="@+id/imagenpregunta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/desc"
                            android:src="@drawable/img_dummy" />
                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <ZoomControls
                        android:id="@+id/zoomControls1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>

                    <RadioGroup
                        android:id="@+id/respuestaopt"
                        android:layout_width="fill_parent"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/opt1"
                            android:textColor="#FFFFFF"
                            android:textSize="14pt" />

                        <RadioButton
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/opt2"
                            android:textColor="#FFFFFF"
                            android:textSize="14pt" />

                        <RadioButton
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/opt3"
                            android:textColor="#FFFFFF"
                            android:textSize="14pt" />

                        <RadioButton
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:text="@string/opt4"
                            android:textColor="#FFFFFF"
                            android:textSize="14pt" />
                    </RadioGroup>
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/siguiente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/siguiente" />
                </TableRow>
            </TableLayout>
        </TableRow>

        <TableRow>

            <LinearLayout android:layout_width="461pt" android:layout_height="wrap_content">

                <Button
                    android:id="@+id/regresarbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:text="@string/regresarbtn" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>